# Eshader

./: CMakeLists.txt  Main.qml  README.md  ShaderCompiler.cpp  ShaderCompiler.h  main.cpp  package.bat  src.qrc
components/: EButton.qml  EDropdown.qml  ELiquidGlass.qml  EShadertoy.qml  ETheme.qml  EToast.qml
components/liquidglass/: liquidglass.frag
pages/: HomePage.qml  ProjectPage.qml  SettingsPage.qml  ShaderPage.qml
presets/Accretion/: Accretion.frag  config.json
presets/Cubelines/: Cubelines.frag  config.json
presets/Seascape/: Seascape.frag  config.json
presets/cube/: config.json  cube.frag
presets/demo1/: BufferA.frag  Image.frag  config.json
presets/demo2/: BufferA.frag  Image.frag  config.json
presets/goo/: config.json
